--- a/style.css
+++ b/style.css
@@ -13,27 +13,24 @@ img{
   width: 500px;
   text-align: center;
 }
-.discover h1{
-  color: var(--Dark-01, #1D1D1D);
-text-align: center;
-font-family: Poppins;
-font-size: 37px;
-font-style: normal;
-font-weight: 600;
-line-height: 60px; /* 133.333% */
-}
-.discover p{
-  color: var(--Dark-03, #777);
-text-align: center;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px; /* 187.5% */
-}
-/* discover end */
 /* coures start */
 .content h2{
   color: #289BDE;
 }
 /* coures end */
+/* work start */
+.section{
+  margin-top: 100px
+}
+/* work end */
+/* join css-start */
+.join{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 100px;
+}
+.join button{
+  margin-left: 100px;
+}
+/* join css-end */
