--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ img{
   align-items: center;
 }
 /* /join end */
+/* comment css-start */
+i{
+  color: #FAB71E;
+}
+
+/* comment css-end */
 /* trustted css-start */
 .trust{
   font-size: 16px;
@@ -41,5 +47,8 @@ img{
   text-align: center;
   height: 250px;
  
+}
+.icon i{
+  color:white;
 }
 /* footer end */
